# sanjaya

./: .gitignore  Makefile  README.md  docker-compose.mssql.yml  docker-compose.postgres.yml  package.json  permissions.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: copilot-instructions.md
api/: README.md  compile.tsp  main.tsp  package.json  pnpm-lock.yaml  tspconfig.yaml
api/models/: dynamic-reporting.tsp  dynamic-reports.tsp  errors.tsp
api/rest/api/: dynamic-reporting.tsp
apps/demo-server/: README.md  db.sqlite3  manage.py  pyproject.toml  seed_northwind.py
apps/demo-server/datasets/: __init__.py  order_details.py
apps/demo-server/demo/: middleware.py  settings.py  urls.py  wsgi.py
apps/demo-vanilla/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/demo-vanilla/src/: client.ts  main.ts  style.css
docs/: MVP-implementation-plan.md  backend-addenda.md  table-pivot-split.md  ui-integration-notes.md  ui-mvp-integration-plan.md  ui-mvp-plan.md
msodbcsql/: .SRCINFO  PKGBUILD  msodbcsql-18.5.1.1-1-x86_64.pkg.tar.zst
